# scratch-pad

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json  remedy.rdbg  scratch_pad_remedy.rdbg
build_scripts/linux/: _variables.sh
build_scripts/macos/: _variables.zsh  build_cmake.zsh  run_project.zsh
build_scripts/windows/: _variables.ps1  build_cmake.ps1  run_project.ps1  set_aliases.ps1
cmake_macros/: prac.cmake
common/: CMakeLists.txt  clock.h  common.h  hash_helpers.h  types.hpp
common/containers/: avl_tree.h  darr.h  htable.h  queue.h  rb_tree.h  stack.h  stack.hpp  string_utils.h
common/containers/OffsetAllocator/: README.md
common/math/: mat.h  vec.h
common/memory/: bitmapped_alloc.h  buddy_alloc.h  common.h  freelist2_alloc.h  freelist_alloc.h  handle.h  linear_alloc.h  memory.h  pool_alloc.h  sebi_pool.h  stack_alloc_forward.h  tlsf.cpp  tlsf.h  tlsf_tests.cpp
common/netcode/: ws.c  ws.h
common/oops/: set.c  set.h
src/: 01_test_project.cpp  CMakeLists.txt  main.c  main.cpp
tools/: cpuid.c  cpuid_msvc.bat  cpuid_msvc.cpp
